# mse1h2026-autogen

./: .dockerignore  Dockerfile  README.md  customer_sync.md  docker-compose.yml  pyproject.toml  reports.md  requirements.txt
.github/workflows/: run-tests.yml
src/prog_questions/: QuestionBase.py  QuestionN1.py  QuestionN2.py  QuestionN3.py  QuestionN4.py  QuestionN5.py  QuestionRandomCondition.py  QuestionRandomExpression.py  QuestionStringOperations.py  __init__.py
src/prog_questions/spring/: QuestionN1.py  QuestionN2.py  QuestionN3.py  QuestionN4.py  QuestionN5.py  __init__.py
src/prog_questions/utility/: CProgramRunner.py  CppProgramRunner.py  RandomConditionLoop.py  RandomExpression.py  StringOperations.py  __init__.py  random_expressions.py
src/prog_questions/utility/generators/: RandomConditionLoop.py
src/task1/: README.md  task1.py
src/task2/: README.md  task2.py
src/task3/: README.md  task3.py
src/task5/: README.md  task5.py
tests/: QuestionN1_spring_test.py  QuestionN1_test.py  QuestionN2_spring_test.py  QuestionN2_test.py  QuestionN3_spring_test.py  QuestionN3_test.py  QuestionN4_spring_test.py  QuestionN4_test.py  QuestionN5_spring_test.py  QuestionN5_test.py  RandomConditionLoop_test.py  RandomExpression_test.py  StringOperaions_test.py  random_expression_test.py  test_questions.py  test_result.py  test_runner.py
